2023-01-20 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Limit hashsum calculation of growing files to stat size
	* Refactor size mismatch warning during hash calculation

2023-01-19 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix hash calculation for growing files

2023-01-18 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Also ignore bcount attribute for compressed files

2023-01-17 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix special attributes handling when pthread is not compiled in

2023-01-16 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add 'growing' and 'compressed' special attributes
	  - support uncompressed hashsum comparison for gzip files (closes: #33)
	  - support hashsums for growing files (closes: #34)
	  - 'S' attribute is now deprecated, use 'growing+s' attributes instead
	  - replace 'S' attribute in '>' compound group with 'growing+s'
	  - add new log level 'compare'
	  - improve some logging

2023-01-15 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Do not show 'different attributes' message for ignored attributes

2022-11-20 Sam James <sam@gentoo.org>
	* Fix bashisms in build system
	* Fix configure.ac compatibility with Clang 16

2022-11-06 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Remove Prelink support (--with-prelink configure option)

2022-11-01 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Change default number of workers to 1 (single-thread)
	* Fix typo in aide.conf manual page

2022-09-04 Marc Haber <mh+debian-packages@zugschlus.de>
	* Allow executable config files to belong to root as well (closes: #137)

2022-08-20 Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Fix some compiler warnings
	* Handle read/write errors in parent/child communication
	* Escape backslash in JSON strings (closes: #136)
	* Improve configurability of workers
	  - add num_workers config option (closes: #134)
	  - accept percentage of available processors (closes: #135)

2022-08-13 Hannes von Haugwitz <hannes@vonhaugwitz.com>